# course-generator

./: .gitignore  README.md  prompts.yaml  pyproject.toml  renovate.json
archive/: main.py  utils.py
courses/seconde/maths/raw_courses/: 1703864194__c1_c1s1.md  1704046005__c1_c1s1.md  c1s1_response_0.md  c1s1_response_1.md
courses/seconde/maths/reviews/: c1s1_response_1.md
courses/seconde/maths/specs/: c1s1.md  c1s1_objectives.json
courses/seconde/maths/specs/json/: t1_nombres_calculs.json  t2_géométrie.json  t3_fonctions.json  t4_statistiques_probabilités.json  t5_algorithme_programmation.json  t6_vocabulaire_logique.json
courses/seconde/maths/specs/markdown/: t1_nombres_calculs.md  t3_fonctions.md  t4_statistiques_probabilités.md  t5_algorithme_programmation.md  t6_vocabulaire_logique.md
courses/seconde/maths/structure/: bo_full.md  geometrie.md  nombres_calculs.md  raw_structure.md  structure.yaml
raw_courses/: c1s1_review_0.md
source/: generator.py  main.py  math_generator.py  utils.py
source/agents/: agents.py  agents_config.py  instruments.py
source/modules/: file.py  llm.py  loader.py  orchestrator.py  rand.py  structure.py  unstructured.py  utils.py
source/prompts/: course_gen_team.py  generation_team.py  review_team.py
